kubernetes/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: planespotter
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: frontend
